2008-07-05  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/start.c,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/run-program/plugin.c,
	plugins/run-program/plugin.h:
	Fix bug #538217: Run in terminal option isn't remembered
	Fix bug: Debugger sources directories isn't remembered neither

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/symbol-browser/plugin.c (project_root_added):
	Fixed global tags loading

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	Patch from Arun Chaganty:
	* configure.in:
	* plugins/symbol-browser/an_symbol_prefs.c
	(on_create_tags_clicked):
	#515954 – create_global_tags.sh: wrong anjuta-tags path

	* global-tags/create_global_tags.sh.in:
	Use #!/bin/bash instead of #!/bin/sh as the script does not work with dash

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/debug-manager/breakpoints.c (on_editor_saved):
	* plugins/symbol-browser/plugin.c (on_editor_saved):
	* plugins/symbol-db/plugin.c (on_editor_saved):
	Adapted to change in the "saved" signal of IAnjutaFile

	* plugins/editor/text_editor.c (text_editor_save_file):
	Fixed #541313 – Crash on saving file
	
	* plugins/sourceview/sourceview.c (on_save_finish):
	Emit "saved" signal

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/anjuta-editor-sourceview.glade:
	Remove "Monitor VFS" preference - it is always enabled

2008-07-04  Johannes Schmid  <jhs@gnome.org>

	* plugins/document-manager/action-callbacks.c
	(on_close_file_activate):
	* plugins/document-manager/anjuta-docman.c:
	* plugins/project-manager/plugin.c (value_added_current_editor):
	* plugins/symbol-browser/plugin.c (value_added_current_editor):
	Fixed GFile* related stuff
	
	* plugins/file-manager/file-model.c (file_model_update_file):
	Do not unref GIcon* as it is owned by GFileInfo*
	
	* plugins/sourceview/anjuta-document-loader.c:
	* plugins/sourceview/anjuta-document-loader.h:
	* plugins/sourceview/anjuta-document-saver.c: