@@ -29,7 +29,15 @@
 #include <gio/gio.h>
 #include <gtk/gtk.h>
 
-#define DIRECTORY_MIME_TYPE "x-directory/normal"
+const gchar* BINARY_SUFFIX[] =
+{
+	".o",
+	".lo",
+	".a",
+	".so",
+	NULL
+};
+
 #define ICON_SIZE 16
 
 enum
@@ -66,6 +74,19 @@ file_model_filter_file (FileModel* model,
 		return FALSE;
 	else if (priv->filter_backup && g_file_info_get_is_backup(file_info))
 		return FALSE;
+	else if (priv->filter_binary && 
+			 g_file_info_get_file_type (file_info) != G_FILE_TYPE_DIRECTORY)
+	{
+		int i;
+		const gchar* name = g_file_info_get_name (file_info);
+		for (i = 0; BINARY_SUFFIX[i] != NULL; i++)
+		{
+			if (g_str_has_suffix (name, BINARY_SUFFIX[i]))
+			{
+				return FALSE;
+			}
+		}
+	}
 	
 	return TRUE;
 }
