@@ -1,3 +1,8 @@
+2008-07-05  Johannes Schmid  <jhs@gnome.org>
+
+	* plugins/file-manager/file-model.c (file_model_filter_file):
+	Fixed "Hide binary files"
+
 2008-07-05  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	* plugins/debug-manager/start.c,
